+ env variables for deployment